# ipynb-translator

./: .env.example  .gitignore  Dockerfile  README.md  README_ko.md  mcp_config.json  mcp_server.py  pyproject.toml  smithery.yaml
ipynb_translator/: __init__.py  bedrock_client.py  config.py  main.py  notebook_handler.py  prompts.py  text_utils.py  translation_engine.py  url_downloader.py
samples/: notebook.ipynb
